--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.2.1",
     "mongodb": "^2.2.16",
     "path": "^0.12.7",
+    "python-shell": "^0.4.0",
     "request": "^2.79.0"
   }
 }
