--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4"
+    "passport-twitter": "~1.0.4",
+    "python-shell": "^0.4.0"
   }
 }
