--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "~1.14.1",
+    "fs": "0.0.1-security",
     "method-override": "~2.3.6",
     "mongoose": "^4.7.6",
     "morgan": "~1.7.0",
